update on amongstrangers project page with media queries

--- a/projects/among-strangers.html
+++ b/projects/among-strangers.html
@@ -91,7 +91,7 @@
 
       <div class="col-md-9 project-content">
         <section id="overview">
-          <div class="content-div content-overview">
+          <!-- <div class="content-div content-overview"> -->
             <div class="color-box"></div>
             <div class="pad-box">
               <h2>Overview</h2>
@@ -109,17 +109,18 @@
               <p>
                 The brand’s aesthetic resembles old relics dug  up from the ground, with its organic formed nature made from the method of electroforming and plating metals.
               </p>
+              <a href="http://amongstrangers.com">Visit Among Strangers</a>
             </div>
-          </div>
+          <!-- </div> -->
         </section><!--end of #overview-->
 
         <section id="brand-video">
-          <div class="content-div content-video">
+          <!-- <div class="content-div content-video"> -->
             <div class="pad-box">
               <h2><span class="fa fa-edit"></span>Brand Video</h2>
               <iframe src="https://player.vimeo.com/video/189691907" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
-          </div>
+          <!-- </div> -->
         </section><!--end of #brand-video-->
 
         <section id="branding-research">
@@ -236,6 +237,9 @@
             </section><!--end of #finallockup-0g-->
             <section id="logo-lockups">
               <h3>Logo Lockups</h3>
+              <p>
+                (Click on the image to view)
+              </p>
               <div class="img-wrapper">
                 <a href="../images/lockup-01.png" data-lity ><img class="img-sq" src="../images/lockup-01.png" alt="" /></a>
                 <a href="../images/lockup-02.png" data-lity ><img class="img-sq" src="../images/lockup-02.png" alt="" /></a>
@@ -264,9 +268,7 @@
               <p>
                 Horizontal lockup with both type and mark
               </p>
-              <p>
-                (Click on the image to view)
-              </p>
+
             </section><!--end of #logo-lockups-->
             <section id="type-color">
               <h3>Typography & Color</h3>
@@ -363,7 +365,7 @@
             <section id="high-fid">
               <h3>Mockups</h3>
               <div class="img-wrapper">
-                <img src="" alt="" />
+                <!-- <img src="" alt="" /> -->
               </div>
             </section><!--end of #high-fid-->
           </div>
@@ -376,29 +378,11 @@
 
   <section class="application">
     <div class="container">
-      <h2>Come and Join Us</h2>
+      <h1>Thank you!</h1>
       <div class="row">
-        <div class="col-sm-6">
-          <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.
-          Nullam quis ante.
-          </p>
-          <img class="img-responsive  " src="http://placehold.it/500x250/5fb3ce/000000">
-        </div>
-        <div class="col-sm-6">
-          <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
-          Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-          </p>
-          <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
-          Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-          </p>
-          <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
-          Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-          </p>
-          <button type="button" class="btn btn-primary">Apply Now</button>
-        </div>
+
+          <a href="#">Next Project</a><i class="fa fa-long-arrow-right fa-2" aria-hidden="true"></i>
+
       </div><!--end of .row-->
     </div><!--end of .container-->
   </section>
