starting to populate high-spirits.html

--- a/projects/high-spirits.html
+++ b/projects/high-spirits.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../styles//css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/global.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/mobile.css" media="screen" title="no title">
-  <link rel="stylesheet" href="../styles/css/among-strangers.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/high-spirits.css" media="screen" title="no title">
 </head>
 
 <body data-spy="scroll" data-target=".scrollspy">
@@ -51,8 +51,7 @@
 
   <!-- project-hero -->
   <div class="project-hero">
-    <div class="color-box"></div>
-    <img class="hero-logo" src="../images/as-hor-beig.png">
+    <img class="hero-logo" src="../images/hs-logo.png">
   </div>
   <!-- end of project-hero -->
 
@@ -62,142 +61,172 @@
           <!-- <h5>Table of Contents</h5> -->
           <ul id="nav" class="side-links nav hidden-xs hidden-sm" data-spy="affix">
             <li><a href="#"><p>Table of Contents</p></a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#brand-video">Brand Video</a></li>
-            <li><a href="#branding-research">Branding Research</a>
+            <li><a href="#intro">Introduction</a>
               <ul class="nav side-links">
-                <li><a href="#target-market"><span class="fa fa-angle-double-right"></span>Target Market</a></li>
-                <li><a href="#competition"><span class="fa fa-angle-double-right"></span>Competition</a></li>
+                <li><a href="#definition"><span class="fa fa-angle-double-right"></span>Definition</a></li>
+                <li><a href="#concept"><span class="fa fa-angle-double-right"></span>Concept</a></li>
                 <li><a href="#inspiration"><span class="fa fa-angle-double-right"></span>Inspiration</a></li>
-                <li><a href="#process"><span class="fa fa-angle-double-right"></span>Process</a></li>
-                <li><a href="#initial-designs"><span class="fa fa-angle-double-right"></span>Initial Designs</a></li>
-                <li><a href="#final-logo-bg"><span class="fa fa-angle-double-right"></span>Final Logo</a></li>
-                <li><a href="#logo-lockups"><span class="fa fa-angle-double-right"></span>Logo Lockups</a></li>
-                <li><a href="#type-color"><span class="fa fa-angle-double-right"></span>Type & Color</a></li>
-                <li><a href="#mockups"><span class="fa fa-angle-double-right"></span>Identity Mockups</a></li>
               </ul>
             </li>
-            <li><a href="#web-design">Web Design Research</a>
+            <li><a href="#concept-video">Concept Video</a></li>
+            <li><a href="#tech-research">Technology Research</a>
               <ul class="nav side-links">
-                <li><a href="#evolution"><span class="fa fa-angle-double-right"></span>Evolution</a></li>
-                <li><a href="#inspiration2"><span class="fa fa-angle-double-right"></span>Inspiration</a></li>
-                <li><a href="#ia"><span class="fa fa-angle-double-right"></span>Information Architecture</a></li>
-                <li><a href="#wireframes"><span class="fa fa-angle-double-right"></span>Wireframes</a></li>
-                <li><a href="#high-fid"><span class="fa fa-angle-double-right"></span>Mockup</a></li>
+                <li><a href="#kirlian"><span class="fa fa-angle-double-right"></span>Kirlian Camera</a></li>
+                <li><a href="#guy"><span class="fa fa-angle-double-right"></span>Guy Coggins</a></li>
               </ul>
+            </li>
+            <li><a href="#wearable">The Wearable</a>
+              <ul class="nav side-links">
+                <li><a href="#sketches"><span class="fa fa-angle-double-right"></span>Sketches</a></li>
+                <li><a href="#prototype"><span class="fa fa-angle-double-right"></span>Prototype</a></li>
+              </ul>
+            </li>
+            <li><a href="#web-design">User Reasearch</a>
+              <ul class="nav side-links">
+                <li><a href="#user-research"><span class="fa fa-angle-double-right"></span>User Research</a></li>
+                <li><a href="#survey-q"><span class="fa fa-angle-double-right"></span>Survey Questions</a></li>
+                <li><a href="#survey-a"><span class="fa fa-angle-double-right"></span>Survey Results</a></li>
+                <li><a href="#target-market"><span class="fa fa-angle-double-right"></span>Target Market</a></li>
+                <li><a href="#persona"><span class="fa fa-angle-double-right"></span>Persona</a></li>
+              </ul>
+            </li>
+            <li><a href="#web-design">User Reasearch</a>
+              <ul class="nav side-links">
+                <li><a href="#user-research"><span class="fa fa-angle-double-right"></span>User Research</a></li>
+                <li><a href="#survey-q"><span class="fa fa-angle-double-right"></span>Survey Questions</a></li>
+                <li><a href="#survey-a"><span class="fa fa-angle-double-right"></span>Survey Results</a></li>
+                <li><a href="#target-market"><span class="fa fa-angle-double-right"></span>Target Market</a></li>
+                <li><a href="#persona"><span class="fa fa-angle-double-right"></span>Persona</a></li>
+                <li><a href="#user-test"><span class="fa fa-angle-double-right"></span>User Testing</a></li>
+              </ul>
+            </li>
+            <li><a href="#web-design">Task Flows</a>
+              <ul class="nav side-links">
+                <li><a href="#ia"><span class="fa fa-angle-double-right"></span>Information Architecture</a></li>
+                <li><a href="#task1"><span class="fa fa-angle-double-right"></span>Task One</a></li>
+                <li><a href="#task2"><span class="fa fa-angle-double-right"></span>Task Two</a></li>
+                <li><a href="#task3"><span class="fa fa-angle-double-right"></span>Task Three</a></li>
+                <li><a href="#task4"><span class="fa fa-angle-double-right"></span>Task Four</a></li>
+                <li><a href="#task5"><span class="fa fa-angle-double-right"></span>Task Five</a></li>
+              </ul>
+            </li>
+            <li><a href="#web-design">Design Evolution</a>
+              <ul class="nav side-links">
+                <li><a href="#evo1"><span class="fa fa-angle-double-right"></span>Task One</a></li>
+                <li><a href="#evo2"><span class="fa fa-angle-double-right"></span>Task Two</a></li>
+                <li><a href="#evo3"><span class="fa fa-angle-double-right"></span>Task Three</a></li>
+              </ul>
+            </li>
+            <li><a href="#screens">High-Fidelity Screens</a>
+            <li><a href="#mockup">App Mockups</a>
+
             </li>
           </ul>
         </div>
 
       <div class="col-md-9 project-content">
-        <section id="overview">
-          <!-- <div class="content-div content-overview"> -->
-            <div class="color-box"></div>
+        <section id="intro">
             <div class="pad-box">
-              <h2>Overview</h2>
-              <h4>An Old Soul in the New Age</h4>
-              <p>
-                Among Strangers came to life in 2014 in
-                San Francisco, California.
-              </p>
-              <p>
-                Using naturally formed and some altered crystals, creator Angela Alarcon, values the spiritual nature of each stone, believing that each crystal carry distinct properties and healing qualities depending on the kind.
-              </p>
-              <p>
-                Among Strangers stands by the belief that each piece has already pre-chosen a bearer, and is hand crafted with intention into powerful talismans to serve the bearer’s highest and best.
-              </p>
-              <p>
-                The brand’s aesthetic resembles old relics dug  up from the ground, with its organic formed nature made from the method of electroforming and plating metals.
-              </p>
-              <a href="http://amongstrangers.com">Visit Among Strangers</a>
+              <h2>Introduction</h2>
+              <section id="definition">
+                <div class="pad-box">
+                  <h3>Definition</h3>
+                  <p>
+                    <span>Au•ra</span>
+                  </p>
+                  <p>
+                    noun |   au·ra  |   \or-ə\
+                  </p>
+                  <p style="font-style:italic;">
+                    a distinctive atmosphere around a given source; an energy field that is held to emanate from a being
+                  </p>
+                </div>
+              </section>
+              <section id="concept">
+                <div class="pad-box">
+                  <h3>Concept</h3>
+                  <p>
+                  High Spirits is a wearable device designed as jewelry and accompanied by an app. Built into the piece of jewelry is a stack of biosensors that measure skin conductivity, temperature, and humidity. These parameters are collected within the app and translated into colors rendered on top of a selfie. This device is inspired by the Nikola Tesla’s experiments on energy discharge and Semyon Kirlian’s camera that measured this phenomenon.
+                  </p>
+                </div>
+              </section>
+              <section id="inspiration">
+                <div class="pad-box">
+                  <h3>Inspiration</h3>
+                  <a href="../images/aura-photo.png" data-lity><img src="../images/aura-photo.png" alt="" /></a>
+                  <p>
+                    This concept is very much inspired by metaphysics, New Age sensibilities, and a fascination with all things unseen– including auras! Are they real or not? If energy exists, why can’t it have color?
+                  </p>
+                  <p>
+                    Aura cameras already exist in niche events and trade shows but it requires a huge set up. High Spirits was created to be handy, beautiful and wearable and to use our own unique energy as artistic expression.
+                  </p>
+                  <p>
+                    Whether if it creates a real curiosity in auras and our potential, or used merely as beautiful photographs, High Spirits exists to expand and ignite ideas.
+                  </p>
+                  <p style="font-style:italic;">
+                    (Photo credit: Christina Lonsdale of Radiant Human)
+                  </p>
+                </div>
+              </section>
             </div>
           <!-- </div> -->
-        </section><!--end of #overview-->
+        </section><!--end of #intro-->
 
-        <section id="brand-video">
+        <section id="concept-video">
           <!-- <div class="content-div content-video"> -->
             <div class="pad-box">
-              <h2><span class="fa fa-edit"></span>Brand Video</h2>
+              <h2><span class="fa fa-edit"></span>Concept Video</h2>
               <iframe src="https://player.vimeo.com/video/189691907" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           <!-- </div> -->
         </section><!--end of #brand-video-->
 
-        <section id="branding-research">
+        <section id="tech-research">
           <div class="pad-box">
-            <h2><span class="fa fa-edit"></span> Branding Research</h2>
-            <section id="target-market">
+            <h2><span class="fa fa-edit"></span> Technology Research</h2>
+            <section id="kirlian">
               <div class="pad-box">
-                <img src="../images/target-market.jpg" alt="" />
-                <h3>Target Market</h3>
+                <img src="../images/kirlian1.jpg" alt="" />
+                <!-- <img src="../images/kirlian2.png" alt="" /> -->
+                <h3>Kirlian Camera</h3>
                 <p>
-                  After a year of selling online on Etsy, as well as Instagram, and in person, I’ve been able to study the target market of my buyers, not just who have spending power, but take a real interest in my jewelry and come back as return customers.
-                </p>
+                  Pioneers if the bio-electromagnetic phenomenon include Nikola Tesla and Semyon Kirlian. Kirlian was very much inspired by the beginning exploration of Tesla in the world of bio-electromagnetic frequencies that he was able to develop a camera that photographs the phenomenon.                 </p>
                 <p>
-                  <span>Age:</span> 30-40yo
-                </p>
-                <p>
-                  <span>Location: </span>San Francisco, CA
-                </p>
-                <p>
-                  <span>Gender: </span>F
-                </p>
-                <p>
-                  <span>Income Level: </span>60,000 and above
-                </p>
-                <p>
-                  <span>Marital Status: </span>Single
-                </p>
-                <p>
-                  <span>Occupation:</span> Health & Wellness experts, and Creatives
-                </p>
-                <p>
-                  <span>Consumer Attitude: </span>Will search online for the best and most unique piece after being 		inspired by a photo posted on instagram
-                </p>
-                <p>
-                  <span>Consumer Values:</span>Values secrecy, and finding something rare and unique to all their peers, values pieces that are not just for aesthetic purposes but are meaningful purchases, values stories behind the pieces
-                </p>
-                <p>
-                  <span>Lifestyle/Interests: </span>Travels, takes weekend vacation, attends dinner parties with friends 	on occasion, loves hiking and adventure, seeks for more meaning in life, values their overall health and well-being, exercises and practices minfulness
-                </p>
-                <p>
-                  <span>Tech: </span>engaged in social media, values affirmation from other followers
+                  The process entails placing sheet photographic film on top of a metal discharge plate. The object to be photographed is then placed directly on top of the film. High voltage is momentarily applied to the metal plate, thus creating an exposure. The corona discharge between the object and the high voltage plate is then captured by the film.
                 </p>
               </div>
             </section><!--end of #target-market -->
-            <section id="competition">
+            <section id="guy">
               <div class="pad-box">
-                <h3>Competition</h3>
-                <img src="../images/pam.png" alt="" />
+                <img src="../images/guy.gif" alt="" />
+                <h3>Aura Imagine by Guy Coggins</h3>
                 <p>
-                  Pamela Love’s typeface and moon logo mark reflect her simple and elegant aesthetic heavily influenced by astrology and the occult.
-                </p>
-                <img src="../images/bona.jpg" alt="" />
-                <p>
-                  Bona Drag’s Egyptian inspired logo also reflects their selection of alternative clothing and unique jewelry carefully curated for the indie witch.
-                </p>
-                <img src="../images/unearthen.jpg" alt="" />
-                <p>
-                  Unearthen’s minimalist take on their logo is versatile and can stand alone as a logo type but can also be paired with any seasonal logo they may create for the brand.
+                  Guy Coggins of Aura Imaging (Redwood City, CA) developed a working polaroid camera that is attached to a hand sensor with a metal hand plate of which the subject places their hand on. This allows the sensors to measure the subjects biofeedback (deviations, skin resistance, humidity of skin, temperature and bioelectricity). These data parameters are then projected as a radiant, colored aura field around the body on a polaroid film.
                 </p>
               </div>
             </section>
             <!--end of #competition-->
-            <section id="inspiration">
+            <section id="wearable">
               <div class="pad-box">
-                <h3>Inspiration</h3>
-                <div class="gap"></div>
-
-                  <img src="../images/kay.jpg" alt="" />
-                  <p>
-                    <span>Kay Nielsen illustrations </span>
-                    I have a deep affinity to folklore and fairytales and Kay Nielsen’s illustrations accompanying these stories we’ve heard as children are breathtaking and beautiful. I find that his style is such a lost art as the world is moving to a more realistic aesthetic.
-                  </p>
-                  <img src="../images/alchemy.jpg" alt="" />
-                  <p>
-                    <span>Alchemical Illustrations</span>
-                    I’ve always been fascinated with old alchemy and the heavy use of symbolism in their illustrations. I believe there are a to of lost secrets hidden behind each found illustration and the mystery in each drawing is something I have been 	drawn to since I was a child.
-                  </p>
+                <h3>The Wearable</h3>
+                <section id="sketches">
+                  <div class="pad-box">
+                    <h3>Sketch</h3>
+                    <a href="../images/sketch.jpg" data-lity><img src="../images/aura-photo.png" alt="" /></a>
+                    <p>
+                      Hiding the sensors and wirings is a priority when thinking about design. I make jewelry using crystals so I want to utilize my method in making this wearable. The crystal will be useful in camouflaging whatever is needed, and the resin and metal I use provides good housing for my sensors.
+                    </p>
+                  </div>
+                </section>
+                <section id="prototype">
+                  <div class="pad-box">
+                    <h3>Final Prototype</h3>
+                    <a href="../images/crystals.jpg" data-lity><img src="../images/aura-photo.png" alt="" /></a>
+                    <p>
+                      Hiding the sensors and wirings is a priority when thinking about design. I make jewelry using crystals so I want to utilize my method in making this wearable. The crystal will be useful in camouflaging whatever is needed, and the resin and metal I use provides good housing for my sensors.
+                    </p>
+                  </div>
+                </section>
               </div>
             </section><!--end of #inspiration-->
             <section id="process">
