done populating curran project: complete

--- a/projects/high-spirits.html
+++ b/projects/high-spirits.html
@@ -12,10 +12,8 @@
   <script src="../js/sticky-kit.min.js"></script>
   <script src="../js/lity.min.js"></script>
 
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="..styles/css/lightbox.css" media="screen" title="no title"> -->
-  <link rel="stylesheet" href="../styles//css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/mobile.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/high-spirits.css" media="screen" title="no title">
 </head>
