--- a/projects/among-strangers.html
+++ b/projects/among-strangers.html
@@ -12,10 +12,8 @@
   <script src="../js/sticky-kit.min.js"></script>
   <script src="../js/lity.min.js"></script>
 
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="..styles/css/lightbox.css" media="screen" title="no title"> -->
-  <link rel="stylesheet" href="../styles//css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/mobile.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/among-strangers.css" media="screen" title="no title">
 </head>
@@ -381,7 +379,7 @@
       <h1>Thank you!</h1>
       <div class="row">
 
-          <a href="#">Next Project</a><i class="fa fa-long-arrow-right fa-2" aria-hidden="true"></i>
+          <a href="high-spirits.html">Next Project</a><i class="fa fa-long-arrow-right fa-2" aria-hidden="true"></i>
 
       </div><!--end of .row-->
     </div><!--end of .container-->
