done with site population, only few missing pieces/links left

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Angela Alarcon Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
   <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -60,22 +61,22 @@
         </div>
         <div class="work-section-content ">
           <div class="work-item1">
-            <a  class="see-project" href="projects/project1.html">
+            <a  class="see-project" href="projects/curran.html">
               <div class="color-box"></div>
               <div class="text-box">
-                <h4>project title</h4>
-                <p>project detail</p><br>
-                <p>see project</p>
+                <h4>Curran Theatre</h4>
+                <p>Web Development</p><br>
+                <p>| see project |</p>
               </div>
             </a>
           </div>
           <div class="work-item2">
-            <a  class="see-project" href="projects/project2.html">
+            <a  class="see-project" href="projects/sf-travel.html">
               <div class="color-box"></div>
               <div class="text-box">
-                <h4>project title</h4>
-                <p>project detail</p><br>
-                <p>see project</p>
+                <h4>SF Travel</h4>
+                <p>Web Design</p><br>
+                <p>| see project |</p>
               </div>
             </a>
           </div>
@@ -83,19 +84,19 @@
             <a  class="see-project" href="projects/among-strangers.html">
               <div class="color-box"></div>
               <div class="text-box">
-                <h4>project title</h4>
-                <p>project detail</p><br>
-                <p>see project</p>
+                <h4>Among Strangers</h4>
+                <p>Branding & Web Design<br>Case Study</p><br>
+                <p>| see project |</p>
               </div>
             </a>
           </div>
           <div class="work-item4">
-            <a  class="see-project" href="projects/project4.html">
+            <a  class="see-project" href="projects/high-spirits.html">
               <div class="color-box"></div>
               <div class="text-box">
-                <h4>project title</h4>
-                <p>project detail</p><br>
-                <p>see project</p>
+                <h4>High Spirits</h4>
+                <p>App Design<br>Case Study</p><br>
+                <p>| see project |</p>
               </div>
             </a>
           </div>
@@ -115,16 +116,11 @@
         </div>
         <div class="about-section-content">
           <div class="about-text-wrapper">
-            <h1>Hi there.</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
-            </p>
+            <h1>Hi there.</h1><br>
+            <h4>I am a Web an UX Designer based in San Francisco.</h4><br>
+            <h4>I love beautiful and intricate design, but also appreciate the simplicity and quiet elegance in subtle strokes.</h4><br>
+            <h4>I graduated with an MA in Web Design and New Media from the Academy of Art University and fell in love with building websites and web applications using great and cognizant design as base.</h4><br>
+            <h4>With my inquisitive mind, I constantly seek learning experiences through mentorship and team work and expanding my creativity through inspiration and experience. </h4>
           </div>
         </div>
         <div class="clear"></div>
@@ -140,9 +136,13 @@
         <div class="contact-section-content">
           <div class="contact-text-wrapper">
             <h1>Let's work together.</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
-            </p>
+            <h4>Email me at <a href="mailto:info@angelaalarcon.net">info@angelaalarcon.net</a></h4>
+            <h4>or connect with me on social media:</h4><br>
+            <a href="https://www.linkedin.com/in/alarconangela"><i class="fa fa-linkedin-square " aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/angelaamongstrangers"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-behance-square" aria-hidden="true"></i></a>
+
           </div>
         </div>
         <div class="clear"></div>
