--- a/all-projects.html
+++ b/all-projects.html
@@ -47,14 +47,6 @@
             </div>
           </div>
         </nav>
-        <!-- <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="120">
-          <ul class="nav navbar-nav my-navbar-wrapper__nav ">
-            <li class="active my-navbar-wrapper__nav--list"><a href="index.html">home</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="index.html#worksection">work</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="index.html#aboutsection">about</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="index.html#contactsection">contact</a></li>
-          </ul>
-        </nav> -->
       </div><!-- end of home-landing -->
     </div><!-- end of main -->
 
@@ -72,7 +64,7 @@
           <li class="filter" data-filter=".category-des"><a href="#">Design</a></li>
           <li class="filter" data-filter=".category-pho"><a href="#">Photography</a></li>
           <li class="filter" data-filter=".category-mot"><a href="#">Motion</a></li>
-          <li class="filter" data-filter=".category-ill"><a href="#">Illustration</a></li>
+          <li class="filter" data-filter=".category-case"><a href="#">Case Studies</a></li>
         </ul>
       </nav>
     </div><!-- end of filter-wrapper -->
@@ -81,7 +73,7 @@
 
       <div class="mix category-web project-box">
         <div class="project-image project-image1">
-          <a  class="see-project" href="projects/project1.html">
+          <a  class="see-project" href="projects/curran.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>Curran</p>
@@ -91,7 +83,7 @@
       </div>
       <div class="mix category-web project-box">
         <div class="project-image project-image2">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/sf-travel.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>SF Travel</p>
@@ -99,9 +91,9 @@
           </a>
         </div>
       </div>
-      <div class="mix category-web project-box">
+      <div class="mix category-web category-case project-box">
         <div class="project-image project-image3">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/among-strangers.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>Among Strangers</p>
@@ -109,9 +101,9 @@
           </a>
         </div>
       </div>
-      <div class="mix category-des project-box">
-        <div class="project-image project-image1">
-          <a  class="see-project" href="#">
+      <div class="mix category-des category-case project-box">
+        <div class="project-image project-image4">
+          <a  class="see-project" href="projects/high-spirits.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>High Spirits</p>
@@ -121,7 +113,7 @@
       </div>
       <div class="mix category-des project-box">
         <div class="project-image project-image2">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/parkarma.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>Parkarma</p>
@@ -131,7 +123,7 @@
       </div>
       <div class="mix category-mot project-box">
         <div class="project-image project-image3">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/lunchbox.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>Lunchbox</p>
@@ -141,7 +133,7 @@
       </div>
       <div class="mix category-des project-box">
         <div class="project-image project-image3">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/sk8.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>SK8</p>
